[project]
name = "medjc09-hub-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "OctSquid", email = "pqvs6k96@s.okayama-u.ac.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/medjc09_hub_python"]
